# handwriting-erase

./: .gitignore  README.md  url.txt
src/: CMakeLists.txt  ai_model.cpp  ai_model.h  main.cpp
src/ai_model/release/: conaninfo.txt  conanmanifest.txt  performance_run_gpu.sh
src/ai_model/release/data/: config.ini
src/ai_model/release/include/: det_handwrite_erase.hpp
src/ai_model/release/lib/: libboost_filesystem.so.1.65.1  libboost_log_setup.so.1.65.1  libnvonnxparser.so.8
src/jsoncpp/: jsoncpp.cpp
